--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1336,7 +1336,7 @@ a {
 }
 .cid-v1I8HVN1MT {
   display: flex;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-v1I8HVN1MT .mbr-overlay {
   background-color: #f92c50;
