--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1398,7 +1398,7 @@ a {
 .cid-v1IcKZBXNe {
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-color: #ffffff;
+  background-color: #ffd7ba;
 }
 .cid-v1IcKZBXNe .mbr-fallback-image.disabled {
   display: none;
@@ -1436,4 +1436,125 @@ a {
 .cid-v1IcKZBXNe .mbr-text,
 .cid-v1IcKZBXNe .mbr-section-btn {
   color: #000000;
+}
+.cid-v2aLadwy04 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #f92c50;
+}
+.cid-v2aLadwy04 .mbr-iconfont {
+  font-size: 1.2rem !important;
+  font-family: 'Moririse2' !important;
+  color: white;
+  transition: all 0.3s;
+  transform: rotate(180deg);
+  padding-left: 0.5rem;
+}
+.cid-v2aLadwy04 .panel-group {
+  border: none;
+}
+.cid-v2aLadwy04 .card-header {
+  padding: 0rem;
+}
+@media (max-width: 767px) {
+  .cid-v2aLadwy04 .card-header {
+    padding: 0rem;
+  }
+}
+.cid-v2aLadwy04 .panel-body {
+  padding: 0rem;
+  padding-bottom: 0.5rem;
+  margin-top: 1rem;
+}
+.cid-v2aLadwy04 .img-col {
+  padding: 0;
+}
+.cid-v2aLadwy04 .img-item {
+  height: 100%;
+}
+.cid-v2aLadwy04 img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-v2aLadwy04 .collapsed span {
+  transform: rotate(0deg);
+}
+.cid-v2aLadwy04 .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-v2aLadwy04 p {
+  margin-bottom: 0.3rem;
+}
+.cid-v2aLadwy04 .panel-title-edit {
+  color: #000000;
+}
+.cid-v2aLadwy04 .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+  border: 0;
+  border-radius: 2rem;
+}
+.cid-v2aLadwy04 .card {
+  background: #ffffff;
+  padding: 2.25rem;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
+}
+@media (max-width: 767px) {
+  .cid-v2aLadwy04 .card {
+    padding: 2rem 1.5rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-v2aLadwy04 .card {
+    margin-bottom: 1rem;
+    padding: 2rem 1.5rem;
+  }
+}
+.cid-v2aLadwy04 .panel-text {
+  color: #000000;
+}
+.cid-v2aLadwy04 .mbr-section-title {
+  text-align: center;
+  color: #000000;
+}
+.cid-v2aLadwy04 .mbr-section-subtitle {
+  color: #000000;
+  text-align: center;
+}
+.cid-v2aLadwy04 .panel-title-edit,
+.cid-v2aLadwy04 .mbr-iconfont {
+  color: #000000;
+}
+.cid-v2aQOkCTMZ {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #44c1f4;
+}
+.cid-v2aQOkCTMZ .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-v2aQOkCTMZ .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-v2aQOkCTMZ .mbr-section-title {
+  text-align: center;
+}
+.cid-v2aQOkCTMZ .mbr-section-subtitle {
+  text-align: center;
+}
+.cid-v2aSnK91IS {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #2e481a;
+  overflow: hidden;
 }
